--- a/smicerp/src/main/resources/templates/index.html
+++ b/smicerp/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
 	<meta content="no-cache" http-equiv="Pragma"/>
 	<meta http-equiv="Expires" content="0"/>
 	<meta content="width=device-width, initial-scale=1, user-scalable=1" name="viewport"/>
-	<title>华夏ERP</title>
+	<title>SMIC_ERP</title>
 	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon"/>
 	<script src="js/global.min.js?ctx=/js/a"></script>
 	<script src="js/jquery/jquery-1.12.4.min.js"></script>
@@ -34,12 +34,10 @@
 	<![endif]-->
 	<!--[if lte IE 8]>
 	<script>window.location.href = '/js/upbw/index.html';</script><![endif]-->
-	<link rel="stylesheet" href="../static/js/jquery-toastr/2.0/toastr.min.css">
-	<link rel="stylesheet" href="js/modules/sys/sysIndex.css">
 	<header class="main-header">
 		<nav class="navbar navbar-static-top">
 			<div class="logo" data-toggle="push-menu">
-				<b>华夏ERP</b>
+				<b>SMIC_ERP</b>
 				<small>&nbsp; &nbsp;<i class="fa fa-bars"></i></small>
 			</div>
 			<div class="navbar-custom-menu">
@@ -175,7 +173,6 @@
 		<div id="tabpanel"></div>
 	</div>
 </div>
-
 <a id="scroll-up" href="#" class="btn btn-sm"><i class="fa fa-angle-double-up"></i></a>
 <script src="js/bootstrap/js/bootstrap.min.js"></script>
 <script src="js/select2/4.0/select2.js"></script>
@@ -188,8 +185,10 @@
 <script src="js/common/i18n/jsherp_zh_CN.js"></script>
 <script src="js/common/common.js"></script>
 <div class="hide" id="desktopTabPage" data-title="首页" data-url="/home"></div>
-<script src="../static/js/jquery-toastr/jquery-toastr/toastr.min.js"></script>
 <script src="js/jquery/jquery.slimscroll.js"></script>
 <script src="js/easyui-1.3.5/jquery.easyui.min.js"></script>
 <script src="js/common/common.js"></script>
+<script src="js/jquery-toastr/2.0/toastr.min.js"></script>
+<link rel="stylesheet" href="js/jquery-toastr/2.0/toastr.min.css">
+<link rel="stylesheet" href="js/modules/sys/sysIndex.css">
 <script src="js/modules/sys/sysIndex.js"></script>
