--- a/smicerp/src/main/resources/templates/login.html
+++ b/smicerp/src/main/resources/templates/login.html
@@ -8,9 +8,9 @@
     <meta content="no-cache" http-equiv="Pragma"/>
     <meta http-equiv="Expires" content="0"/>
     <meta content="width=device-width, initial-scale=1, user-scalable=1" name="viewport"/>
-    <title>华夏ERP</title>
+    <title>SMIC_ERP</title>
     <meta name="keywords" content="ERP,ERP系统,进销存,进销存系统" />
-    <meta name="description" content="华夏ERP基于SpringBoot框架，立志为中小企业提供开源好用的ERP软件，目前专注进销存+财务功能。主要模块有零售管理、采购管理、销售管理、仓库管理、财务管理、报表查询、基础数据、系统管理等。支持预付款、收入支出、仓库调拨、组装拆卸、订单等特色功能。拥有库存状况、出入库统计等报表。同时对角色和权限进行了细致全面控制，精确到每个按钮和菜单。" />
+    <meta name="description" content="SMIC_ERP基于SpringBoot框架，立志为中小企业提供开源好用的ERP软件，目前专注进销存+财务功能。主要模块有零售管理、采购管理、销售管理、仓库管理、财务管理、报表查询、基础数据、系统管理等。支持预付款、收入支出、仓库调拨、组装拆卸、订单等特色功能。拥有库存状况、出入库统计等报表。同时对角色和权限进行了细致全面控制，精确到每个按钮和菜单。" />
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon"/>
     <script src="js/global.min.js?ctx=/js/a"></script>
     <script src="js/jquery/jquery-1.12.4.min.js"></script>
@@ -22,7 +22,8 @@
     <link rel="stylesheet" href="js/adminlte/css/AdminLTE.min.css">
     <link rel="stylesheet" href="css/jsherp.css">
     <link rel="stylesheet" href="js/adminlte/css/skins/skin-blue-light2.css">
-    <link rel="stylesheet" href="js/jquery-toastr/2.0/toastr.min.css">2
+    <link rel="stylesheet" href="js/jquery-toastr/2.0/toastr.min.css">
+    <link rel="stylesheet" href="js/modules/sys/sysLogin.css">
     <script type="text/javascript" src="js/jquery-toastr/2.0/toastr.min.js"></script>
 </head>
 <body class="hold-transition login-page">
@@ -33,12 +34,10 @@
     <![endif]-->
     <!--[if lte IE 8]><script>window.location.href = '/js/static/upbw/index.html';</script><![endif]-->
     <!-- <link rel="stylesheet" href="js/static/icheck/1.0/square/blue.css"> -->
-    <link rel="stylesheet" href="../static/js/jquery-toastr/2.0/toastr.min.css">
-    <link rel="stylesheet" href="js/modules/sys/sysLogin.css">
     <div class="login-box">
         <div class="login-logo">
             <a href="/">
-                <b>华夏ERP</b>
+                <b>SMIC_ERP</b>
                 <small>V2.1</small>
             </a>
         </div>
@@ -84,13 +83,7 @@
             </div>
         </div>
         <div class="login-copyright">
-            © 2015-2020http://localhost:8090/
-            <a style="color:#00458a;" href="https://www.huaxiaerp.com/" target="_blank">ERP系统</a>
-            <a style="color:#00458a;" href="http://www.beian.miit.gov.cn" target="_blank">苏ICP备19040373号</a>
-            <a style="color:#00458a;" href="https://gitee.com/jishenghua/JSH_ERP" target="_blank">华夏ERP</a>
-            <a href='https://gitee.com/jishenghua/JSH_ERP/stargazers' target="_blank">
-                <img src='https://gitee.com/jishenghua/JSH_ERP/badge/star.svg?theme=white' alt='star'></img>
-            </a>
+            © 2020 smic cf practise demo
         </div>
     </div>
 </div>
