添加演示帐号内容

--- a/smicerp/src/main/resources/templates/pages/user/password.html
+++ b/smicerp/src/main/resources/templates/pages/user/password.html
@@ -101,13 +101,17 @@
                             else if (2 == status) {
                                 $("#orgTipMsg").empty().append("<font color='red'>原始密码输入错误</font>");
                                 return;
-                            }
-                            else if (3 == status) {
+                            }else if (3 == status) {
                                 $.messager.alert('提示', '管理员admin密码不能修改！', 'warning');
                                 return;
                             }
                             else if (4 == status){
                                 $.messager.alert('提示','新旧密码一样！', 'warning');
+                                return;
+                            }
+                            else if (5 == status) {
+                                $.messager.alert('提示', '演示帐号SMIC密码不能修改！', 'warning');
+                                return;
                             }
                             else {
                                 $.messager.alert('提示', '更新密码异常，请稍后再试！', 'error');
