--- a/smicerp/src/main/resources/templates/pages/manage/depot.html
+++ b/smicerp/src/main/resources/templates/pages/manage/depot.html
@@ -157,7 +157,8 @@
             //loadFilter: pagerFilter,
             pageSize: initPageSize,
             pageList: initPageNum,
-            columns: [[
+            columns: [
+                [
                 {field: 'id', width: 35, align: "center", checkbox: true},
                 {
                     title: '操作', field: 'op', align: "center", width: 60,
@@ -189,7 +190,8 @@
                 },
                 {title: '描述', field: 'remark', width: 120}
 
-            ]],
+            ]
+            ],
             toolbar: [
                 {
                     id: 'addDepot',
@@ -579,8 +581,8 @@
             }),
             success: function (res) {
                 if(res && res.code === 200){
-                    if(res.data && res.data.page) {
-                        $("#tableData").datagrid('loadData', res.data.page);
+                    if(res.data) {
+                        $("#tableData").datagrid('loadData', res.data);
                     }
                 }
             },
