--- a/smicerp/src/main/resources/templates/pages/manage/depot.html
+++ b/smicerp/src/main/resources/templates/pages/manage/depot.html
@@ -267,7 +267,7 @@
     }
 
     //删除仓库信息
-    function deleteDepot(depotID) {
+    function deleteDepot(depotId) {
         $.messager.confirm('删除确认', '确定要删除此仓库信息吗？', function (r) {
             if (r) {
                 $.ajax({
@@ -275,7 +275,7 @@
                     url: "/depot/batchDeleteDepotByIds",
                     dataType: "json",
                     data: ({
-                        ids: depotID
+                        ids: depotId
                     }),
                     success: function (res) {
                         if(res && res.code == 200) {
@@ -283,7 +283,7 @@
                         } else {
                             if(res && res.code == 601){
                                 var jsondata={};
-                                jsondata.ids=depotID;
+                                jsondata.ids=depotId;
                                 jsondata.deleteType='2';
                                 var type='single';
                                 batDeleteDepotForceConfirm(res,"/depot/batchDeleteDepotByIds",jsondata,type);
@@ -305,26 +305,33 @@
     }
     //设为默认操作事件
     function setDepotIsDefault() {
-        var allRow = $('#tableData').datagrid('getRows');
-        var row = $('#tableData').datagrid('getChecked');
+        // var allRow = $('#tableData').datagrid('getRows');
+        const row = $('#tableData').datagrid('getChecked');
         if (row.length == 0) {
             $.messager.alert('设置提示', '没有记录被选中！', 'info');
             return;
-        }
-        if (row.length > 0) {
-            function setDefault(depotID, isDefault) {
+        } else if (row.length > 1) {
+            $.messager.alert('设置提示', '默认仓库只能设置一个！', 'info');
+            return;
+        } else {
+            if (row[0].isDefault){
+                $.messager.alert('设置提示', '该仓库已是默认仓库！', 'info');
+            }else {
                 $.ajax({
-                    type: "post",
+                    type: "get",
                     url: "/depot/updateDepotIsDefault",
                     dataType: "json",
                     async: false,
                     data: ({
-                        depotID: depotID,
-                        isDefault: isDefault
+                        depotId: row[0].id,
                     }),
                     success: function (res) {
-                        if (res == "true" && isDefault) {
-
+                        if (res && res.code === 200) {
+                            $.messager.alert('提示', '设为默认仓库成功！', 'info');
+                            initTableData();
+                        }else {
+                            $.messager.alert('提示', res.message, 'error');
+                            return;
                         }
                     },
                     //此处添加错误处理
@@ -334,21 +341,46 @@
                     }
                 });
             }
-
-            if (row.length == 1) {
-                setDefault(row[0].id, true); //设置默认
-                for (var i = 0; i < allRow.length; i++) {
-                    if (allRow[i].id != row[0].id) {
-                        setDefault(allRow[i].id, false);
-                    }
-                }
-                setTimeout(function () {
-                    $("#searchBtn").click();
-                }, 1000);
-            }
-
-            return;
         }
+        // 原方法比较麻烦
+        // if (row.length > 0) {
+        //     function setDefault(depotId, isDefault) {
+        //         $.ajax({
+        //             type: "post",
+        //             url: "/depot/updateDepotIsDefault",
+        //             dataType: "json",
+        //             async: false,
+        //             data: ({
+        //                 depotId: depotId,
+        //                 isDefault: isDefault
+        //             }),
+        //             success: function (res) {
+        //                 if (res == "true" && isDefault) {
+        //
+        //                 }
+        //             },
+        //             //此处添加错误处理
+        //             error: function () {
+        //                 $.messager.alert('提示', '设为默认账户异常，请稍后再试！', 'error');
+        //                 return;
+        //             }
+        //         });
+        //     }
+
+        //     if (row.length == 1) {
+        //         setDefault(row[0].id, true); //设置默认
+        //         for (var i = 0; i < allRow.length; i++) {
+        //             if (allRow[i].id != row[0].id) {
+        //                 setDefault(allRow[i].id, false);
+        //             }
+        //         }
+        //         setTimeout(function () {
+        //             $("#searchBtn").click();
+        //         }, 1000);
+        //     }
+        //
+        //     return;
+        // }
     }
     //批量删除仓库
     function batDeleteDepot() {
@@ -439,7 +471,7 @@
 
     //增加
     var url;
-    var depotID = 0;
+    var depotId = 0;
     //保存编辑前的名称
     var oldDepot = "";
 
@@ -453,7 +485,7 @@
         $("#name").focus();
         $("#selectType").val("principal");
         oldDepot = "";
-        depotID = 0;
+        depotId = 0;
         url = '/depot/add';
     }
 
@@ -503,13 +535,13 @@
         oldDepot = depotInfo[1];
         $('#depotDlg').dialog('open').dialog('setTitle', '<img src="/js/easyui-1.3.5/themes/icons/pencil.png"/>&nbsp;编辑仓库信息');
         $(".window-mask").css({width: webW, height: webH});
-        depotID = depotInfo[0];
+        depotId = depotInfo[0];
         //焦点在名称输入框==定焦在输入文字后面
         $("#name").val("").focus().val(depotInfo[1]);
         url = '/depot/update?id=' + depotInfo[0];
     }
 
-    //检查名称是否存在 ++ 重名无法提示问题需要跟进
+    //检查名称是否存在
     function checkDepotName() {
         var name = $.trim($("#name").val());
         //表示是否存在 true == 存在 false = 不存在
@@ -522,13 +554,12 @@
                 dataType: "json",
                 async: false,
                 data: ({
-                    id: depotID,
                     name: name
                 }),
                 success: function (res) {
                     if(res && res.code === 200) {
-                        if(res.data && res.data.status) {
-                            flag = res.data.status;
+                        if(res.data) {
+                            flag = res.data;
                             if (flag) {
                                 $.messager.alert('提示', '仓库名称已经存在', 'info');
                                 return;
