--- a/smicerp/src/main/resources/static/template/user_forselect.html
+++ b/smicerp/src/main/resources/static/template/user_forselect.html
@@ -5,14 +5,14 @@
     <meta charset="utf-8">
     <!-- 指定以IE8的方式来渲染 -->
     <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE8"/>
-    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon"/>
-    <script type="text/javascript" src="/js/jquery-1.8.0.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="/js/easyui-1.3.5/themes/default/easyui.css"/>
-    <link rel="stylesheet" type="text/css" href="/js/easyui-1.3.5/themes/icon.css"/>
-    <link type="text/css" rel="stylesheet" href="/css/common.css"/>
-    <script type="text/javascript" src="/js/easyui-1.3.5/jquery.easyui.min.js"></script>
-    <script type="text/javascript" src="/js/easyui-1.3.5/locale/easyui-lang-zh_CN.js"></script>
-    <script type="text/javascript" src="/js/common/common.js"></script>
+    <link rel="shortcut icon" href="/static/images/favicon.ico" type="image/x-icon"/>
+    <script type="text/javascript" src="/static/js/jquery-1.8.0.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="/static/js/easyui-1.3.5/themes/default/easyui.css"/>
+    <link rel="stylesheet" type="text/css" href="/static/js/easyui-1.3.5/themes/icon.css"/>
+    <link type="text/css" rel="stylesheet" href="/static/css/common.css"/>
+    <script type="text/javascript" src="/static/js/easyui-1.3.5/jquery.easyui.min.js"></script>
+    <script type="text/javascript" src="/static/js/easyui-1.3.5/locale/easyui-lang-zh_CN.js"></script>
+    <script type="text/javascript" src="/static/js/common/common.js"></script>
 </head>
 <body>
 <!-- 数据显示table -->
