--- a/smicerp/src/main/resources/templates/pages/manage/account.html
+++ b/smicerp/src/main/resources/templates/pages/manage/account.html
@@ -110,16 +110,17 @@
             pagination: true,
             pageSize: initPageSize,
             pageList: initPageNum,
-            columns: [[
+            columns: [
+                [
                 {field: 'id', width: 35, align: "center", checkbox: true},
                 {title: '名称', field: 'name', width: 100},
-                {title: '编号', field: 'serialno', width: 150, align: "center"},
-                {title: '期初金额', field: 'initialamount', width: 100, align: "center"},
-                {title: '当前余额', field: 'currentamount', width: 100, align: "center"},
+                {title: '编号', field: 'serialNo', width: 150, align: "center"},
+                {title: '期初金额', field: 'initialAmount', width: 100, align: "center"},
+                {title: '当前余额', field: 'currentAmount', width: 100, align: "center"},
                 {
-                    title: '是否默认', field: 'isdefault', width: 100, align: "center",
+                    title: '是否默认', field: 'isDefault', width: 100, align: "center",
                     formatter: function (value, rec) {
-                        if (rec.isdefault) {
+                        if (rec.isDefault) {
                             return "<b style='color:green'>是</b>";
                         }
                         else {
@@ -131,14 +132,15 @@
                 {
                     title: '操作', field: 'op', align: "center", width: 210, formatter: function (value, rec) {
                         var str = '';
-                        var rowInfo = rec.id + 'AaBb' + rec.name + 'AaBb' + rec.serialno + 'AaBb' + rec.initialamount + 'AaBb' + rec.currentamount + 'AaBb' + rec.remark;
+                        var rowInfo = rec.id + 'AaBb' + rec.name + 'AaBb' + rec.serialNo + 'AaBb' + rec.initialAmount + 'AaBb' + rec.currentAmount + 'AaBb' + rec.remark;
                         str += '<img src="/js/easyui-1.3.5/themes/icons/list.png" style="cursor: pointer;" onclick="showAccountInOutList(\'' + rowInfo + '\');"/>&nbsp;<a onclick="showAccountInOutList(\'' + rowInfo + '\');" style="text-decoration:none;color:black;" href="javascript:void(0)">流水</a>&nbsp;&nbsp;';
                         str += '<img src="/js/easyui-1.3.5/themes/icons/pencil.png" style="cursor: pointer;" onclick="editAccount(\'' + rowInfo + '\');"/>&nbsp;<a onclick="editAccount(\'' + rowInfo + '\');" style="text-decoration:none;color:black;" href="javascript:void(0)">编辑</a>&nbsp;&nbsp;';
                         str += '<img src="/js/easyui-1.3.5/themes/icons/edit_remove.png" style="cursor: pointer;" onclick="deleteAccount(\'' + rowInfo + '\');"/>&nbsp;<a onclick="deleteAccount(\'' + rowInfo + '\');" style="text-decoration:none;color:black;" href="javascript:void(0)">删除</a>&nbsp;&nbsp;';
                         return str;
                     }
                 }
-            ]],
+            ]
+            ],
             toolbar: [
                 {
                     id: 'addAccount',
@@ -342,7 +344,7 @@
 
     //增加结算账户
     var url;
-    var accountID = 0;
+    var accountId = 0;
     //保存编辑前的名称
     var oldAccount = "";
 
@@ -359,7 +361,7 @@
 
         $("#account").focus();
         oldAccount = "";
-        accountID = 0;
+        accountId = 0;
         url = '/account/add';
     }
 
@@ -371,22 +373,18 @@
             $.messager.alert('设置提示', '没有记录被选中！', 'info');
             return;
         }
+
         if (row.length > 0) {
-            function setDefault(accountID, isDefault) {
+            function setDefault(accountId, isDefault) {
                 $.ajax({
                     type: "post",
                     url: "/account/updateAmountIsDefault",
                     dataType: "json",
                     async: false,
                     data: ({
-                        accountId: accountID,
+                        accountId: accountId,
                         isDefault: isDefault
                     }),
-                    success: function (res) {
-                        if (res == "true" && isDefault) {
-
-                        }
-                    },
                     //此处添加错误处理
                     error: function () {
                         $.messager.alert('提示', '设为默认账户异常，请稍后再试！', 'error');
@@ -401,6 +399,7 @@
                     if (allRow[i].id != row[0].id) {
                         setDefault(allRow[i].id, false);
                     }
+
                 }
                 setTimeout(function () {
                     $("#searchBtn").click();
@@ -429,6 +428,8 @@
                     //加载完以后重新初始化
                     var opts = $("#tableData").datagrid('options');
                     showAccountDetails(opts.pageNumber, opts.pageSize);
+                }else {
+                    $.messager.alert('提示', res.message, 'error');
                 }
             },
             //此处添加错误处理
@@ -453,13 +454,13 @@
         $('#accountDlg').dialog('open').dialog('setTitle', '<img src="/js/easyui-1.3.5/themes/icons/pencil.png"/>&nbsp;编辑结算账户');
         $(".window-mask").css({width: webW, height: webH});
         $('#accountFM').form('load', row);
-        accountID = accountInfo[0];
+        accountId = accountInfo[0];
         //焦点在名称输入框==定焦在输入文字后面
         $("#account").val("").focus().val(accountInfo[1]);
         url = '/account/update?id=' + accountInfo[0];
     }
 
-    //检查结算账户 名称是否存在 ++ 重名无法提示问题需要跟进
+    //检查结算账户
     function checkAccountName() {
         var accountName = $.trim($("#name").val());
         //表示是否存在 true == 存在 false = 不存在
@@ -472,15 +473,17 @@
                 dataType: "json",
                 async: false,
                 data: ({
-                    id: accountID,
                     name: accountName
                 }),
                 success: function (res) {
                     if(res && res.code === 200) {
-                        if(res.data && res.data.status) {
-                            flag = res.data.status;
-                            if (flag) {
+                        if(res.data) {
+                            flag = true;
+                            if (res.data.deleteFlag === '0') {
                                 $.messager.alert('提示', '结算账户名称已经存在', 'info');
+                                return;
+                            } else {
+                                $.messager.alert('提示', '结算账户名称已名称存在,但是已被删除，请联系管理员11945', 'info');
                                 return;
                             }
                         }
@@ -530,8 +533,8 @@
             }),
             success: function (res) {
                 if(res && res.code === 200){
-                    if(res.data && res.data.page) {
-                        $("#tableData").datagrid('loadData', res.data.page);
+                    if(res.data) {
+                        $("#tableData").datagrid('loadData', res.data);
                     }
                 }
             },
@@ -573,7 +576,8 @@
             pagination: true,
             pageSize: initPageSize,
             pageList: initPageNum,
-            columns: [[
+            columns: [
+                [
                 {
                     title: '单据编号', field: 'number', width: 150,
                     formatter: function (value, row) {
@@ -603,7 +607,8 @@
                 },
                 {title: '余额', field: 'balance', width: 80},
                 {title: '入库出库日期', field: 'operTime', width: 180}
-            ]],
+            ]
+            ],
             onLoadError: function () {
                 $.messager.alert('页面加载提示', '页面加载异常，请稍后再试！', 'error');
                 return;
