--- a/smicerp/src/main/resources/templates/pages/manage/serialNumber.html
+++ b/smicerp/src/main/resources/templates/pages/manage/serialNumber.html
@@ -188,7 +188,8 @@
             //loadFilter: pagerFilter,
             pageSize: initPageSize,
             pageList: initPageNum,
-            columns: [[
+            columns: [
+                [
                 {field: 'id', width: 35, align: "center", checkbox: true},
                 {field: 'depotheadId', hidden: true},
                 {field: 'depotHeadType', hidden: true},
@@ -228,7 +229,8 @@
                 {title: '创建时间',align: "center",  field: 'createTime', width: 140,formatter: formatDatebox},
                 {title: '更新时间', align: "center", field: 'updateTime', width: 140,formatter: formatDatebox},
                 {title: '备注',align: "center",  field: 'remark',width: 200}
-            ]],
+            ]
+            ],
             toolbar: [
                 {
                     id: 'addSerialNumber',
