--- a/smicerp/src/main/resources/templates/pages/manage/unit.html
+++ b/smicerp/src/main/resources/templates/pages/manage/unit.html
@@ -106,7 +106,8 @@
             //loadFilter: pagerFilter,
             pageSize: initPageSize,
             pageList: initPageNum,
-            columns: [[
+            columns: [
+                [
                 {field: 'id', width: 35, align: "center", checkbox: true},
                 {
                     title: '操作', field: 'op', align: "center", width: 60,
@@ -119,7 +120,8 @@
                     }
                 },
                 {title: '计量单位', field: 'uname', width: 200}
-            ]],
+            ]
+            ],
             toolbar: [
                 {
                     id: 'addUnit',
