--- a/smicerp/src/main/resources/templates/pages/manage/log.html
+++ b/smicerp/src/main/resources/templates/pages/manage/log.html
@@ -111,7 +111,8 @@
             //loadFilter: pagerFilter,
             pageSize: initPageSize,
             pageList: initPageNum,
-            columns: [[
+            columns: [
+                [
                 {title: '操作模块', field: 'operation', width: 120},
                 {title: '操作详情', field: 'contentdetails', width: 350},
                 {title: '操作人员', field: 'userName', width: 100, align: "center"},
@@ -120,7 +121,8 @@
                 }},
                 {title: '操作IP', field: 'clientip', width: 100, align: "center"},
                 {title: '操作时间', field: 'createTimeStr', width: 150, align: "center"}
-            ]],
+            ]
+            ],
             onLoadError: function () {
                 $.messager.alert('页面加载提示', '页面加载异常，请稍后再试！', 'error');
                 return;
