--- a/smicerp/src/main/resources/templates/pages/manage/rolePushBtn.html
+++ b/smicerp/src/main/resources/templates/pages/manage/rolePushBtn.html
@@ -68,7 +68,8 @@
             animate: false,
             //交替出现背景
             striped: true,
-            columns: [[
+            columns: [
+                [
                 {field: 'Id', align: "center", hidden: true},
                 {title: '名称', field: 'Name', width: 100},
                 {
@@ -94,7 +95,8 @@
                         }
                     }
                 }
-            ]],
+            ]
+            ],
             onLoadError: function () {
                 $.messager.alert('页面加载提示', '页面加载异常，请稍后再试！', 'error');
                 return;
