--- a/smicerp/src/main/resources/templates/pages/materials/materialProperty.html
+++ b/smicerp/src/main/resources/templates/pages/materials/materialProperty.html
@@ -108,7 +108,8 @@
             //交替出现背景
             striped: true,
             //loadFilter: pagerFilter,
-            columns: [[
+            columns: [
+                [
                 {field: 'id', width: 10, align: "center", hidden: true},
                 {title: '名称', field: 'nativename', width: 100},
                 {
@@ -131,7 +132,8 @@
                         return str;
                     }
                 }
-            ]],
+            ]
+            ],
             onLoadError: function () {
                 $.messager.alert('页面加载提示', '页面加载异常，请稍后再试！', 'error');
                 return;
