--- a/smicerp/src/main/resources/templates/pages/reports/account_report.html
+++ b/smicerp/src/main/resources/templates/pages/reports/account_report.html
@@ -230,7 +230,8 @@
             pagination: true,
             pageSize: initPageSize,
             pageList: initPageNum,
-            columns: [[
+            columns: [
+                [
                 {
                     title: '单据编号', field: 'number', width: 150,
                     formatter: function (value, row) {
@@ -260,7 +261,8 @@
                 },
                 {title: '余额', field: 'balance', width: 80},
                 {title: '入库出库日期', field: 'operTime', width: 180}
-            ]],
+            ]
+            ],
             onLoadError: function () {
                 $.messager.alert('页面加载提示', '页面加载异常，请稍后再试！', 'error');
                 return;
