--- a/smicerp/src/main/resources/templates/pages/reports/buy_in_report.html
+++ b/smicerp/src/main/resources/templates/pages/reports/buy_in_report.html
@@ -101,7 +101,8 @@
             //loadFilter: pagerFilter,
             pageSize: 10,
             pageList: [10, 50, 100],
-            columns: [[
+            columns: [
+                [
                 {title: '名称', field: 'MaterialName', width: 60},
                 {title: '型号', field: 'MaterialModel', width: 80},
                 {title: '扩展信息', field: 'MaterialOther', width: 150},
@@ -119,7 +120,8 @@
                 {title: '进货金额', field: 'InSumPrice', width: 60},
                 {title: '退货数量', field: 'OutSum', width: 60},
                 {title: '退货金额', field: 'OutSumPrice', width: 60}
-            ]],
+            ]
+            ],
             onLoadError: function () {
                 $.messager.alert('页面加载提示', '页面加载异常，请稍后再试！', 'error');
                 return;
