--- a/smicerp/src/main/resources/templates/pages/reports/customer_account.html
+++ b/smicerp/src/main/resources/templates/pages/reports/customer_account.html
@@ -99,7 +99,8 @@
             striped: true,
             pageSize: 10,
             pageList: [10, 50, 100],
-            columns: [[
+            columns: [
+                [
                 {
                     title: '单据编号', field: 'number', width: 140,
                     formatter: function (value, row) {
@@ -112,7 +113,8 @@
                 {title: '实际支付', field: 'changeAmount', width: 80},
                 {title: '本期变化', field: 'allPrice', width: 80},
                 {title: '单据日期', field: 'oTime', width: 140}
-            ]],
+            ]
+            ],
             onLoadError: function () {
                 $.messager.alert('页面加载提示', '页面加载异常，请稍后再试！', 'error');
                 return;
