--- a/smicerp/src/main/resources/templates/pages/reports/in_material_count.html
+++ b/smicerp/src/main/resources/templates/pages/reports/in_material_count.html
@@ -184,13 +184,15 @@
             striped: true,
             pageSize: 10,
             pageList: [10, 50, 100],
-            columns: [[
+            columns: [
+                [
                 {title: '商品名称', field: 'mName', width: 150},
                 {title: '商品型号', field: 'model', width: 150},
                 {title: '商品类型', field: 'categoryName', width: 120},
                 {title: '入库数量', field: 'numSum', width: 120},
                 {title: '入库金额', field: 'priceSum', width: 120}
-            ]],
+            ]
+            ],
             onLoadError: function () {
                 $.messager.alert('页面加载提示', '页面加载异常，请稍后再试！', 'error');
                 return;
