--- a/smicerp/src/main/resources/templates/pages/reports/in_out_stock_report.html
+++ b/smicerp/src/main/resources/templates/pages/reports/in_out_stock_report.html
@@ -203,7 +203,8 @@
             //loadFilter: pagerFilter,
             pageSize: 10,
             pageList: [10, 50, 100],
-            columns: [[
+            columns: [
+                [
                 {title: '名称', field: 'MaterialName', width: 60},
                 {title: '型号', field: 'MaterialModel', width: 80},
                 {title: '扩展信息', field: 'MaterialOther', width: 150},
@@ -214,7 +215,8 @@
                 {title: '出库数量', field: 'OutSum', width: 60},
                 {title: '本月结存数量', field: 'thisSum', width: 80},
                 {title: '结存金额', field: 'thisAllPrice', width: 60}
-            ]],
+            ]
+            ],
             onLoadError: function () {
                 $.messager.alert('页面加载提示', '页面加载异常，请稍后再试！', 'error');
                 return;
