--- a/smicerp/src/main/resources/templates/pages/reports/out_detail.html
+++ b/smicerp/src/main/resources/templates/pages/reports/out_detail.html
@@ -186,7 +186,8 @@
             striped: true,
             pageSize: 10,
             pageList: [10, 50, 100],
-            columns: [[
+            columns: [
+                [
                 {
                     title: '单据编号', field: 'number', width: 140,
                     formatter: function (value, row) {
@@ -201,7 +202,8 @@
                 {title: '客户', field: 'sname', width: 200},
                 {title: '仓库', field: 'dname', width: 120},
                 {title: '出库日期', field: 'operTime', width: 80}
-            ]],
+            ]
+            ],
             onLoadError: function () {
                 $.messager.alert('页面加载提示', '页面加载异常，请稍后再试！', 'error');
                 return;
