--- a/smicerp/src/main/resources/templates/pages/reports/sale_out_report.html
+++ b/smicerp/src/main/resources/templates/pages/reports/sale_out_report.html
@@ -103,7 +103,8 @@
             //loadFilter: pagerFilter,
             pageSize: 10,
             pageList: [10, 50, 100],
-            columns: [[
+            columns: [
+                [
                 {title: '名称', field: 'MaterialName', width: 60},
                 {title: '型号', field: 'MaterialModel', width: 80},
                 {title: '扩展信息', field: 'MaterialOther', width: 150},
@@ -123,7 +124,8 @@
                 {title: '退货金额', field: 'InSumPrice', width: 60},
                 {title: '实际销售金额', field: 'OutInSumPrice', width: 80}
 
-            ]],
+            ]
+            ],
             onLoadError: function () {
                 $.messager.alert('页面加载提示', '页面加载异常，请稍后再试！', 'error');
                 return;
