--- a/smicerp/src/main/resources/templates/pages/reports/stock_warning_report.html
+++ b/smicerp/src/main/resources/templates/pages/reports/stock_warning_report.html
@@ -202,7 +202,8 @@
             //loadFilter: pagerFilter,
             pageSize: 10,
             pageList: [10, 50, 100],
-            columns: [[
+            columns: [
+                [
                 {title: '名称', field: 'materialName', width: 60},
                 {title: '型号', field: 'materialModel', width: 80},
                 {title: '扩展信息', field: 'materialOther', width: 150},
@@ -212,7 +213,8 @@
                 {title: '库存数量', field: 'basicNumber', width: 80},
                 {title: '安全库存量', field: 'safetystock', width: 80},
                 {title: '临界库存量', field: 'basicLinjieNumber', width: 80}
-            ]],
+            ]
+            ],
             onLoadError: function () {
                 $.messager.alert('页面加载提示', '页面加载异常，请稍后再试！', 'error');
                 return;
