--- a/smicerp/src/main/resources/templates/pages/reports/account_report.html
+++ b/smicerp/src/main/resources/templates/pages/reports/account_report.html
@@ -86,7 +86,8 @@
             //loadFilter: pagerFilter,
             pageSize: initPageSize,
             pageList: initPageNum,
-            columns: [[
+            columns: [
+                [
                 {title: '名称', field: 'name', width: 100},
                 {title: '编号', field: 'serialno', width: 150, align: "center"},
                 {title: '期初金额', field: 'initialamount', width: 100, align: "center"},
@@ -100,7 +101,8 @@
                         return str;
                     }
                 }
-            ]],
+            ]
+            ],
             onLoadError: function () {
                 $.messager.alert('页面加载提示', '页面加载异常，请稍后再试！', 'error');
                 return;
