零售管理之零售出库:数据表格VO展示:多表关联查询,存在bug待修复

--- a/smicerp/src/main/resources/templates/pages/manage/roleApp.html
+++ b/smicerp/src/main/resources/templates/pages/manage/roleApp.html
@@ -84,7 +84,7 @@
                         data: {
                             info: JSON.stringify({
                                 type: type,
-                                keyid: url_id,
+                                keyId: url_id,
                                 value: GetNode('child')
                             })
                         },
