--- a/smicerp/src/main/resources/templates/pages/manage/rolePushBtn.html
+++ b/smicerp/src/main/resources/templates/pages/manage/rolePushBtn.html
@@ -131,8 +131,8 @@
             url: "/userBusiness/getBasicData",
             type: "get",
             data: {
-                Type: 'RoleFunctions',
-                KeyId: keyId
+                type: 'RoleFunctions',
+                keyId: keyId
             },
             success: function (res) {
                 if (res && res.code === 200) {
