--- a/smicerp/src/main/resources/templates/pages/materials/retail_out_list.html
+++ b/smicerp/src/main/resources/templates/pages/materials/retail_out_list.html
@@ -22,7 +22,8 @@
 </head>
 <body>
 <!-- 数据显示table -->
-<div id="tablePanel" class="easyui-panel" data-options="fit:true" style="padding:1px; top:300px;" title="零售出库列表" iconCls="icon-list">
+<div id="tablePanel" class="easyui-panel" data-options="fit:true" style="padding:1px; top:300px;" title="零售出库列表"
+     iconCls="icon-list">
     <table id="searchTable">
         <tr>
             <td>单据编号：</td>
@@ -61,12 +62,12 @@
                 <td style="width:70px;height:50px;">会员卡号：</td>
                 <td style="padding:5px;width:200px;">
                     <div class="org-list">
-                    <input id="OrgId" name="OrgId" style="width:130px;"/>
+                        <input id="OrgId" name="OrgId" style="width:130px;"/>
                     </div>
-                <div class="add-org-btn">
-                    <img id="addMember" src="/js/easyui-1.3.5/themes/icons/edit_add.png"
-                         style="cursor: pointer;" alt="增加会员" title="增加会员"/>
-                </div>
+                    <div class="add-org-btn">
+                        <img id="addMember" src="/js/easyui-1.3.5/themes/icons/edit_add.png"
+                             style="cursor: pointer;" alt="增加会员" title="增加会员"/>
+                    </div>
                 </td>
                 <td style="width:70px;">单据日期：</td>
                 <td style="padding:5px">
