--- a/smicerp/src/main/resources/templates/pages/user/userRole.html
+++ b/smicerp/src/main/resources/templates/pages/user/userRole.html
@@ -81,7 +81,7 @@
                         data: {
                             info: JSON.stringify({
                                 type: type,
-                                keyid: url_id,
+                                keyId: url_id,
                                 value: getNode()
                             })
                         },
