--- a/smicerp/src/main/resources/templates/pages/reports/in_detail.html
+++ b/smicerp/src/main/resources/templates/pages/reports/in_detail.html
@@ -98,8 +98,8 @@
             type: "get",
             url: "/userBusiness/getBasicData",
             data: ({
-                KeyId: uid,
-                Type: "UserDepot"
+                keyId: uid,
+                type: "UserDepot"
             }),
             //设置为同步
             async: false,
