--- a/smicerp/src/main/resources/templates/pages/reports/in_material_count.html
+++ b/smicerp/src/main/resources/templates/pages/reports/in_material_count.html
@@ -96,8 +96,8 @@
             type: "get",
             url: "/userBusiness/getBasicData",
             data: ({
-                KeyId: kid,
-                Type: "UserDepot"
+                keyId: kid,
+                type: "UserDepot"
             }),
             //设置为同步
             async: false,
