--- a/smicerp/src/main/resources/templates/pages/reports/stock_warning_report.html
+++ b/smicerp/src/main/resources/templates/pages/reports/stock_warning_report.html
@@ -82,8 +82,8 @@
             type: "get",
             url: "/userBusiness/getBasicData",
             data: ({
-                KeyId: kid,
-                Type: "UserDepot"
+                keyId: kid,
+                type: "UserDepot"
             }),
             //设置为同步
             async: false,
