--- a/smicerp/src/main/resources/templates/pages/user/userCustomer.html
+++ b/smicerp/src/main/resources/templates/pages/user/userCustomer.html
@@ -83,7 +83,7 @@
                         data: {
                             info: JSON.stringify({
                                 type: type,
-                                keyid: url_id,
+                                keyId: url_id,
                                 value: GetNode('child')
                             })
                         },
