完成零售出库的分页查询

--- a/smicerp/src/main/resources/templates/pages/materials/retail_out_list.html
+++ b/smicerp/src/main/resources/templates/pages/materials/retail_out_list.html
@@ -28,11 +28,11 @@
         <tr>
             <td>单据编号：</td>
             <td>
-                <input type="text" name="searchNumber" id="searchNumber" style="width:100px;"/>
+                <input type="text" name="searchNumber" id="searchNumber" style="width:125px;"/>
             </td>
             <td>商品信息：</td>
             <td>
-                <input type="text" name="searchMaterial" id="searchMaterial" placeholder="名称，型号" style="width:100px;"/>
+                <input type="text" name="searchMaterial" id="searchMaterial" placeholder="名称或型号" style="width:100px;font-style: normal"/>
             </td>
             <td>单据日期：</td>
             <td>
